Fixing alignment issue in footer in Safari

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -459,7 +459,6 @@ footer {
 
         li {
             display: inline-block;
-            @include rem(line-height, 5px);
             @include rem(padding, 10px);
 
             &:first-of-type {
